# minecraft_server

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  server.cpp
src/lib/: CMakeLists.txt  packet.cpp  player.cpp  response.cpp  tools.cpp
src/lib/includes/: gameEngine.h  packet.h  player.h  response.h  tools.h
tests/: CMakeLists.txt  apiCallTest.cpp
